# enigma2-pliplugins

./: Makefile.am  configure.ac
PLi/SoftcamSetup/src/: SoftcamSetup.py
Panel_SFTEAM/: Makefile.am
Panel_SFTEAM/po/: Makefile.am
Panel_SFTEAM/sftpanel/: Makefile.am
Panel_SFTEAM/sftpanel/src/: Makefile.am
sftpanel/: Makefile.am  Makefile.txt
sftpanel/src/: Makefile.am
sftpanel/src/images/: Makefile.am
