installdir = $(LIBDIR)/enigma2/python/Plugins/Panel_SFTEAM/sftpanel

SUBDIRS = images

install_PYTHON = \
                 Password.py \
 		 __init__.py \
 		 ecccam.py \
	         emuman.py \
		 minstall.py \
		 plugin.py \
		 tools.py \
		 tunerserver.py

dist_install_DATA = \				 
                     sfpanel.png \
		     epghosts.txt
