installdir = $(LIBDIR)/enigma2/python/Plugins/Panel_SFTEAM/sftpanel/src/images



dist_pkgdata_DATA = \
                                 addon.png \
				 ambamini.png \
				 blue.png \
				 cardact.png \
				 cardmini.png \
				 crashmini.png \
				 cron.png \
				 ddns.png \
				 drop.png \
				 editorcc.png \
				 emuact.png \
				 epg.png \
				 epp2.png \
				 green.png \
				 hosts.png \
				 info.png \
				 info2.png \
				 info50.png \
				 install.png \
				 ipk.png \
				 ipk3.png \
				 ipk4.png \
				 ipkact.png \
				 ipkmini.png \
				 kernel.png \
				 kernelmini.png \
				 kernelminimem.png \
				 menu.png \
				 multimediapanel.png \
				 ntp.png \
				 ntpact.png \
				 ntpmini.png \
				 panelcc.png \
				 paneloscam.png \
				 passw.png \
				 picon.png \
				 red.png \
				 script.png \
				 serv.png \
				 servact.png \
				 serviceman.png \
				 sfpanelinfo.png \
				 soft.png \
				 softcam.png \
				 swap.png \
				 swapminion.png \
				 system2.png \
				 tar.png \
				 taract.png \
				 tarmini.png \
				 tools.png \
				 tpmini.png \
				 tunerserver.png \
				 unisw.png \
				 unusb.png \
				 usbico.png\
				 vset.png \
				 yellow.png
